Update with differente modes

--- a/src/Config/config.example.json
+++ b/src/Config/config.example.json
@@ -1,8 +1,9 @@
 {
 	"title": "Mozilla WebVR",
 	"comments": [
-		"Good try!", "Keep going!", "Almost there!", "Very good!", "Excellent!"
+		"Awful!", "Keep working on it!", "Almost there!", "Very good!", "Excellent!"
 	],
 	"apiaccess": "localhost",
-	"port": 4000
+	"port": 4000,
+  "mode": "firefox"
 }
